// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tshandler appends node with text 1`] = `
"// Here's a comment
var a = 1
console.log('appended');;

var b = 2
console.log('appended');;

var c = 3
console.log('appended');;
"
`;

exports[`tshandler does not mod when nothing is returned 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

console.log('remove me fully');

var c = 3;
"
`;

exports[`tshandler does not modify files in dry-run mode 1`] = `
"// No changes, in dry run.
var a = 1;

var b = 2;

var c = 3;

console.log(a);

console.log(b);
"
`;

exports[`tshandler mods multiple mods if results in array 1`] = `
"// Here's a comment
var aaaa = 1;

var b = 2;

console.log('remove me fully');

var cccc = 3;
"
`;

exports[`tshandler mods multiple mods in a generator function 1`] = `
"// Here's a comment
var aaaa = 1;

var b = 2;

console.log('remove me fully');

var cccc = 3;
"
`;

exports[`tshandler prepends node with text 1`] = `
"// Here's a comment
console.log('prepended');
var a = 1;

console.log('prepended');
var b = 2;

console.log('prepended');
var c = 3;
"
`;

exports[`tshandler removes node 1`] = `
"// Here's a comment
var a = 1;

var b = 2;



var c = 3;
"
`;

exports[`tshandler removes node fully 1`] = `
"// Here's a comment
var a = 1;

var b = 2;

var c = 3;
"
`;

exports[`tshandler replaces node with text 1`] = `
"// Here's a comment
var a = 'test';

var b = 'test';

var c = 'test';

console.log(a);

console.log(b);
"
`;

exports[`tshandler returns list of files modified 1`] = `
"// Here's a comment
var a = 'test';

var b = 'test';

var c = 'test';

console.log(a);

console.log(b);
"
`;
